<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_state"
        android:orderInCategory="100"
        android:title="@string/action_state"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_timer"
        android:orderInCategory="100"
        android:title="@string/action_timer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_autostop"
        android:orderInCategory="100"
        android:title="@string/action_autostop"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/action_update"
        app:showAsAction="never" />
</menu>
