<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1.0"

    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/layout_route"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:padding="5dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/abc_text_size_large_material" />

        <ListView
            android:id="@+id/listViewRoute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:listSelector="@android:color/holo_green_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_display"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:weightSum="1.0"
        android:padding="5dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <TextClock
            android:id="@+id/tvClock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/tvRouteId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvBusNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_plate"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/tvRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_route"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvCurrentOrderID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="visible"
            tools:text="@string/order_id" />

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version" />

        <TextView
            android:id="@+id/textViewSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed" />
        <Button
            android:id="@+id/btnStartTrack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="startStopTrip"
            android:text="@string/button_start"
            android:textSize="@dimen/abc_text_size_large_material" />
    </LinearLayout>
</LinearLayout>